Atualizando a estrutura do código para a API AWESOMEAPI